[gd_scene load_steps=13 format=2]

[ext_resource path="res://font/romulus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://guns/DivideZeroRocket.gd" type="Script" id=2]
[ext_resource path="res://guns/parabola.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.715481, 1 )
colors = PoolColorArray( 0, 0.894118, 0.0156863, 1, 0.152941, 0.380392, 0, 1, 0.0117647, 0.14902, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 8.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 2 )
hue_variation = 0.17
hue_variation_random = 1.0

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.769874, 1 )
colors = PoolColorArray( 0.776471, 0.776471, 0.776471, 1, 0.305882, 0.305882, 0.305882, 1, 0.619608, 0.619608, 0.619608, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_align_y = true
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 24
outline_size = 2
extra_spacing_space = -2
font_data = ExtResource( 1 )

[sub_resource type="CircleShape2D" id=8]
radius = 8.37046

[sub_resource type="CircleShape2D" id=9]
radius = 150.0

[node name="DivideZeroRocket" type="Area2D"]
show_behind_parent = true
collision_layer = 8
collision_mask = 37
script = ExtResource( 2 )

[node name="FlightParticles" type="Particles2D" parent="."]
position = Vector2( -77.9536, 0 )
amount = 150
local_coords = false
process_material = SubResource( 3 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
position = Vector2( -8.61333, 0 )
z_index = 5
emitting = false
amount = 70
lifetime = 0.5
one_shot = true
explosiveness = 0.76
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -78.315
margin_top = -10.7798
margin_right = 5.68503
margin_bottom = 10.2202
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.858824, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -6
text = "==UND=>"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2( -8.39059, 0 )
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_hit"]
